[package]
name = "axum-jwt-oidc"
version = "0.1.0"
edition = "2021"
authors = ["Soya Miyoshi"]
description = "Axum middleware for OIDC JWT token validation and claims extraction"
repository = "https://github.com/soya-miyoshi/axum-jwt-oidc"
license = "MIT OR Apache-2.0"
keywords = ["axum", "tower", "jwt", "oidc", "auth", "middleware"]
categories = ["authentication", "web-programming::http-server"]
readme = "README.md"

[dependencies]
async-oidc-jwt-validator = "0.1.2"
axum = "0.8"
futures = "0.3"
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
tower = "0.5"
log = "0.4"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
